web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: roboshop
  labels: # these labels are deployment labels
    app: web
    project: roboshop
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels: # these labels are used to find the pods
      app: web
      project: roboshop
      tier: web
  template:
    metadata:
      labels: # these labels are pod labels
        app: web
        project: roboshop
        tier: web
    spec:
      containers:
      - name: web
        image: joindevops/web:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: web
          items:
            - key: nginx.conf
              path: nginx.conf
